<resources>
    <string name="app_name">Employee list</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_employee">Save employee</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
</resources>
