<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text|textCapSentences"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text|textCapSentences"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/age"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="text|textCapSentences"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age" />

        <CheckBox
            android:id="@+id/gender_male"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:text="@string/male"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender" />

        <CheckBox
            android:id="@+id/gender_female"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            android:text="@string/female"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_male" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_address"
            android:layout_width="@dimen/match_constraints"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_female" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>